--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
+    "files-from-path": "^0.2.6",
     "hardhat": "^2.9.6",
     "ipfs-car": "^0.7.0",
     "mime": "^3.0.0",
